# nosi

./: .gitignore  .pre-commit-config.yaml  HANDOFF-bty-bootstrap-defaults.md  LICENSE  Makefile  PLAN-netboot-bundle.md  README.md  mkosi.conf  mkosi.finalize.chroot  mkosi.postinst.chroot  ruff.toml  variants.yml
.github/scripts/: oras-push.sh
.github/workflows/: build.yml  docs.yml  lint.yml
cijoe/configs/: debian-13-headless.toml  debian-13-sysdev.toml  debian-base.toml  debian-sysdev.toml  fedora-44-desktop.toml  fedora-44-headless.toml  fedora-44-sysdev.toml  fedora-base.toml  fedora-sysdev.toml  freebsd-14-headless.toml  freebsd-sysdev.toml  (+14 more)
configs/: debian-base.toml  fedora-base.toml  ubuntu-base.toml
descriptions/: debian-13-desktop.md  debian-13-headless.md  debian-13-lxc.md  debian-13-proxmox.md  fedora-44-desktop.md  fedora-44-headless.md  fedora-44-lxc.md  freebsd-14-headless.md  freebsd-15-headless.md  rpios-13-desktop.md  rpios-13-headless.md  ubuntu-2404-headless.md  ubuntu-2604-docker.md  ubuntu-2604-headless.md  ubuntu-2604-lxc.md  ubuntu-2604-wsl.md  ubuntu-2604-wsl.wsl.md
docs/: Makefile
docs/tooling/: README.md  pyproject.toml
docs/tooling/src/nosi_docs/: __init__.py  catalog.py  cli.py
provision/: README.md  apply.sh
scripts/: diskimage_build.py  package.sh  render-seed.sh
tasks/: build.yaml
tests/: conftest.py  test_buildlib.py  test_docs_catalog.py  test_gen_catalog.py  test_imgshrink.py  test_netboot_bundle_pack.py  test_userdata_render.py
tools/: gen_catalog.py
variants/: debian-base.conf  fedora-base.conf  ubuntu-base.conf
(+101 files in other folders)
