[project]
name = "nosi-docs"
version = "0.1.0"
description = "Documentation build tooling for the nosi project"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Simon A. F. Lund", email = "os@safl.dk" }]
license = "BSD-3-Clause"
dependencies = [
    "sphinx>=8",
    "myst-parser[linkify]>=4",
    "sphinx-copybutton>=0.5",
    "sphinx-autobuild>=2024.10",
    "furo>=2024.8",
]

[project.scripts]
nosi-docs-serve = "nosi_docs.cli:serve"
nosi-docs-build-html = "nosi_docs.cli:build_html"
nosi-docs-build-pdf = "nosi_docs.cli:build_pdf"
nosi-docs-fetch-catalog = "nosi_docs.catalog:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nosi_docs"]
